# Owerlayer

./: .gitignore  Cargo.toml  check_ui.py  check_ui2.py  extract_menus.py  extract_toolbar.py  extract_tools.py  find_glow.py  fix_duplicates.py  fix_filter_blur.py  fix_fx.py  fix_fx_again.py  fix_fx_btn.py  fix_fx_re_2.py  fix_gl_renderer.py  fix_glow_final.py  fix_glow_re.py  fix_layer.py  fix_layer2.py  fix_layer3.py  fix_layer4.py  fix_new.py  fix_obj_blur.py  fix_obj_fx.py  fix_obj_fx2.py  fix_overlay.py  fix_shader.py  fix_tool_files.py  fix_url.py  old_toolbar.txt  patch_toolbar_and_overlay.py  refactor.py  regex_patch.py  scratch.py  sync_filters.py  sync_filters_2.py  view_helper.py
Backup V511/: Cargo.toml
backup/: hotkey.rs  main.rs  overlay.rs  project.rs  winapi_utils.rs
backup_v2/: Cargo.toml
backup_v2/src/: main.rs  overlay.rs
backup_v3/src/: main.rs  overlay.rs  winapi_utils.rs
backup_v4/: main.rs  overlay.rs
backup_v5/: Cargo.toml
backup_v5/src/: main.rs  overlay.rs  project.rs  winapi_utils.rs
src/: capture_thread.rs  gl_renderer.rs  history.rs  main.rs  overlay.rs  overlay.rs.tmp  project.rs  rasterize.rs  scratch.rs  types.rs  utils.rs  web_engine.rs  wgc_capture.rs  winapi_utils.rs
src/tools/: blur.rs  brush.rs  cut.rs  embed.rs  eraser.rs  mirror.rs  mod.rs  move_tool.rs  paint_bucket.rs  shape.rs  snip.rs  text.rs
src/ui/: filter_menu.rs  history_menu.rs  layer_menu.rs  mod.rs  object_fx.rs  settings_menu.rs  toolbar.rs
