[package]
name = "owerlayer"
version = "0.5.0"
edition = "2021"
description = "Lightweight transparent screen overlay for drawing and annotations"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
egui = { version = "0.31", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
directories = "5"
rfd = "0.17.2"
reqwest = { version = "0.13.2", features = ["blocking"] }
rayon = "1.10"
ul-next = { version = "0.5", optional = true, features = ["loaded"] }

[features]
default = []
webengine = ["ul-next"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_HiDpi",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
